--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
 
         <title>Primera pagina web</title>
+        <p>Miguel Angel Carrero Escalante</p><br>
+        <p>C.I: 31357376</p>
         
         <h1><i>pagina web Tema 3</i></h1>
         <p>esta pagina web tien como finalidad poner en practica todos los conocimientos adquiridos por medio del <b>Curso</b> de HTML5 </p>
